--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,7 @@
-# Prerequisites
-*.d
+#Ignore autogenerate
+include/version.h
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# Ignore build directory 
+build/
+out/
+bin/
